2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * help/sv/sv.po: Added Swedish translation.
	
2006-03-04  Benoît Dejean  <benoit@placenet.org>

	* charpick.c: (build_table): Fixed potential overflow.
	Fixed C99 code.
	Closes #333242.

2006-02-27  Luca Ferretti  <elle.uca@libero.it>

	* help/it/it.po: Updated Italian translation

2006-02-11  Davyd Madeley  <davyd@madeley.id.au>

	* charpick.c: small fix in build_table() to correct a division by zero

2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: update french translation, by Christophe Bliard
	<christophe.bliard@trux.info>

2005-12-03  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/*: add french translation, by Christophe Bliard
	<christophe.bliard@trux.info>
	* docs/*: give some .cvsignore love

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* help/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-20  Alessio Frusciante  <algol@firenze.linux.it>

	* help/it/it.po: 
	* help/Makefile.am: Added Italian translation by
	Luca Ferretti <elle.uca@infinito.it>.

2005-09-10  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* help/Makefile.am
	* help/pt_BR/*: Added Brazilian Portuguese translation from
	Pedro de Medeiros <pedro.medeiros@gmail.com>.

2005-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* charpick.c:
	* properties.c: Only show palette selector if there are palettes to
	  select. Closes #170659. Patch from Felix Riemann <felix@hsgheli.de>.

2005-07-31  Vincent van Adrighem  <adrighem@gnome.org>

	* help/ChangeLog: removed redundant changelog.
	* help/nl/*: Dutch translation updated by Myckel Habets.

2005-07-21  Shaun McCance  <shaunm@gnome.org>

	* help/C/char-palette.xml:
	- Switched to DocBook 4.3, sanified email addresses

2005-07-20  Davyd Madeley  <davyd@madeley.id.au>

	* help/*: Remove lots of unwanted files. XML files still need