@@ -1,27 +1,0 @@
-<legalnotice id="legalnotice">
-	<para>
-	 Tillst&aring;nd att kopiera, distribuera och/eller modifiera detta dokument ges under villkoren i GNU Free Documentation License (GFDL), version 1.1 eller senare, utgivet av Free Software Foundation utan standardavsnitt och omslagstexter En kopia av GFDL finns att h&auml;mta p&aring; denna l&auml;nk <ulink type="help" url="ghelp:fdl">link</ulink> eller i filen COPYING-DOCS
-	  som medf&ouml;ljer denna handbok.
-         </para>
-         <para> Denna handbok utg&ouml;r en av flera GNOME-handb&ouml;cker som distribueras under villkoren i GFDL.  Om du vill distribuera denna handbok separat fr&aring;n &ouml;vriga handb&ouml;cker kan du g&ouml;ra detta genom att l&auml;gga till en kopia av licensavtalet i handboken enligt instruktionerna i avsnitt 6 i licensavtalet.
-	</para>
-
-	<para>
-	  Flera namn p&aring; produkter och tj&auml;nster &auml;r registrerade varum&auml;rken. I de fall dessa namn f&ouml;rekommer i GNOME-dokumentation - och medlemmarna i GNOME-dokumentationsprojektet &auml;r medvetna om dessa varum&auml;rken - &auml;r de skrivna med versaler eller med inledande versal. 
-	</para>
-
-	<para> 
-DOKUMENTET OCH MODIFIERADE VERSIONER AV DOKUMENTET TILLHANDAH&Aring;LLS UNDER VILLKOREN I GNU FREE DOCUMENTATION LICENSE ENDAST UNDER F&Ouml;LJANDE F&Ouml;RUTS&Auml;TTNINGAR: 
-
-	  <orderedlist>
-		<listitem>
-		  <para>DOKUMENTET TILLHANDAH&Aring;LLS I "BEFINTLIGT SKICK" UTAN N&Aring;GON SOM HELST GARANTI, VARE SIG UTTRYCKLIG ELLER UNDERF&Ouml;RST&Aring;DD, INKLUSIVE MEN INTE BEGR&Auml;NSAT TILL GARANTIER ATT DOKUMENTET ELLER MODIFIERAD VERSION AV DOKUMENTET INTE INNEH&Aring;LLER N&Aring;GRA FELAKTIGHETER, SOM SKULLE KUNNA HA EN NEGATIV INVERKAN P&Aring; S&Auml;LJBARHET, L&Auml;MPLIGHET F&Ouml;R ETT VISST &Auml;NDAM&Aring;L ELLER ICKE-LAGSTRIDIGHET. VAD G&Auml;LLER KVALITET, EXAKTHET OCH UTF&Ouml;RANDE AV DOKUMENTET OCH MODIFIERADE VERSIONER AV DOKUMENTET &Auml;R RISKEN HELT OCH H&Aring;LLET DIN. OM ETT DOKUMENT ELLER EN MODIFIERAD VERSION AV ETT DOKUMENT SKULLE VISA SIG INNEH&Aring;LLA FELAKTIGHETER I N&Aring;GOT H&Auml;NSEENDE &Auml;R DET DU (INTE DEN URSPRUNGLIGA SKRIBENTEN, F&Ouml;RFATTAREN ELLER N&Aring;GON ANNAN MEDARBETARE) SOM F&Aring;R ST&Aring; F&Ouml;R ALLA EVENTUELLA KOSTNADER F&Ouml;R SERVICE, REPARATIONER ELLER KORRIGERINGAR. DENNA GARANTIFRISKRIVNING UTG&Ouml;R EN V&Auml;SENTLIG DEL AV DETTA LICENSAVTAL. DETTA INNEB&Auml;R ATT ALL ANV&Auml;NDNING AV ETT DOKUMENT ELLER MODIFIERAD VERSION AV ETT DOKUMENT BLIR AUKTORISERAD ENDAST UNDER DENNA ANSVARSFRISKRIVNING.  OCH
-		  </para>
-		</listitem>
-		<listitem>
-		  <para>INTE UNDER N&Aring;GRA OMST&Auml;NDIGHETER ELLER INOM RAMEN F&Ouml;R N&Aring;GON LAGSTIFTNING, OAVSETT OM DET G&Auml;LLER KR&Auml;NKNING (INKLUSIVE V&Aring;RDSL&Ouml;SHET), KONTRAKT ELLER DYLIKT, SKALL F&Ouml;RFATTAREN, DEN URSPRUNGLIGA SKRIBENTEN ELLER ANNAN MEDARBETARE ELLER &Aring;TERF&Ouml;RS&Auml;LJARE AV DOKUMENTET ELLER AV MODIFIERAD VERSION AV DOKUMENTET ELLER N&Aring;GON LEVERANT&Ouml;R TILL N&Aring;GON AV N&Auml;MNDA PARTER ST&Auml;LLAS ANSVARIG GENTEMOT N&Aring;GON F&Ouml;R N&Aring;GRA DIREKTA, INDIREKTA, S&Auml;RSKILDA ELLER OF&Ouml;RUTSEDDA SKADOR ELLER F&Ouml;LJDSKADOR AV N&Aring;GOT SLAG INKLUSIVE MEN INTE BEGR&Auml;NSAT TILL SKADOR BETR&Auml;FFANDE F&Ouml;RLORAD GOODWILL, HINDER I ARBETET, DATORHAVERI ELLER N&Aring;GRA ANDRA T&Auml;NKBARA SKADOR ELLER F&Ouml;RLUSTER UPPKOMNA P&Aring; GRUND AV ELLER RELATERADE TILL ANV&Auml;NDNINGEN AV DOKUMENTET ELLER MODIFIERADE VERSIONER AV DOKUMENTET, &Auml;VEN OM PART SKALL HA BLIVIT INFORMERAD OM M&Ouml;JLIGHETEN TILL S&Aring;DANA SKADOR. 
-		  </para>
-		</listitem>
-	  </orderedlist>
-	</para>
-  </legalnotice>
