@@ -1,3 +1,8 @@
+2006-07-23  Daniel Nylander  <po@danielnylander.se>
+
+        * help/sv/sv.po: Updated Swedish translation.
+	* help/sv/legal.xml: Removed obsolete XML file.
+	
 2006-06-29  Daniel Nylander  <po@danielnylander.se>
 
         * help/sv/sv.po: Added Swedish translation.
